--- a/proposal.html
+++ b/proposal.html
@@ -1,14 +1,10 @@
 <!-- Project Title: Pinder
 
-Project Description: 
+Project Description: A site that allows a user to generate a nearby cat adoption as well as an amazon link to items you should buy for your pet. 
 
 GIVEN a user wants to adopt a cat
 WHEN a searches for a pet on our site
 THEN they are presented with a nearby adoption with an item to purchase for said animal
 
-API's: 
-
-Wire Frame: 
-
-Rough breakdown of tasks: 
+API's: Petfinder & Amazon
 -->
