--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
     <div class="col-12 col-md-9 p-3 text-light">
         <h2>Where to Stream? <span id="result-stream"></span></h2>
         <div id="result-stream-content">
-          <ul id = "ul-stream"></ul>
+          
+            <p id="sname"></p>
+            <p id="sprice"></p>
+            <p id="stype"></p>
+            <p id="surl"></p>
+
+          
         </div>
       </div>
   </div>
