Added JS coding to pull in movie informaiton

--- a/index.html
+++ b/index.html
@@ -33,7 +33,15 @@
       <div class = "movie-results">
       <h2>Showing a random movie from your selected genre: <span id="result-text"></span></h2>
         <div id="result-content">
-          <ul id = "ul-movie"></ul>
+          <p id="movieTitle"></p>
+          <p id="moviePoster"></p>
+          <p id="movieYear"></p>
+          <p id="movieRated"></p>
+          <p id="movieReleased"></p>
+          <p id="movieActors"></p>
+          <p id="movieGenre"></p>
+          <p id="movieLanguage"></p>
+          <p id="moviePlot"></p>
         </div>
       </div>
     <div class="stream-results" id="stream-container">
