fixed button click event

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <aside class="side-container">
       <div class="side">
         <section id="search-section" class="mb-2">
-          <h2>Pick which movie you are in the mood for:</h2>
+          <h2>Pick which genre you are in the mood for:</h2>
           <button class="btn" id = "book-movies">Movies you can watch instead of read</button>
           <button class="btn" id = "sad-movies">Movies that will make you cry</button>
           <button class="btn" id = "scary-movies">Movies that will make you sleep with the lights on</button>
