--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 
   <body>
     <header id="wrapper" class="center-aligned">
-      <img src="./assets/images/blackplaceholder.PNG" alt="placeholder"  height="100px" width="1200px">
+      </div id="doggie">
+        <img src="./assets/images/movie-theater-dog.PNG" height="300px"/>
+      </div>
+      <!-- <img src="./assets/images/blackplaceholder.PNG" alt="placeholder"  height="100px" width="1200px"> -->
         <h1 class="movie-title">Movie Mania</h1>
     </header>
   <main>
@@ -26,8 +29,20 @@
           <button class="btn" id = "romance-movies">Movies that will make you fall in love</button>
           <button class="btn" id = "action-movies">Movies that will make you want to do parkour and/or punch people</button>
         </section>
-      </div id="doggie">
-      <img src="./assets/images/movie-theater-dog.PNG" height="350px"/>
+<!-- search container -->
+        <div class="search-container">
+        <div class="search-element">
+          <h3>Search Movie:</h3>
+          <input type="text" class="form-control" placeholder="Search Movie Title ..." id="movie-search-box"
+            onkeyup="findMovies()" onclick="findMovies()">
+  
+          <div class="search-list" id="search-list">
+            <!-- list here -->
+            <!-- <div class = "search-list-item"> -->
+          </div>
+        </div>
+      </div>
+      <!-- end of search container -->
     </aside>
     <section class = "results-container">
       <div class = "movie-results">
@@ -53,21 +68,6 @@
           <p id="surl"></p>
         </div>
     </div>
-    <!-- search container -->
-    <div class="search-container">
-      <div class="search-element">
-        <h3>Search Movie:</h3>
-        <input type="text" class="form-control" placeholder="Search Movie Title ..." id="movie-search-box"
-          onkeyup="findMovies()" onclick="findMovies()">
-
-        <div class="search-list" id="search-list">
-          <!-- list here -->
-          <!-- <div class = "search-list-item"> -->
-        </div>
-      </div>
-    </div>
-    <!-- end of search container -->
-
     <!-- result container -->
     <div class="container">
       <div class="result-container">
