Styled the results container

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="./assets/images/movie-theater-dog.PNG" height="300px"/>
       </div>
       <!-- <img src="./assets/images/blackplaceholder.PNG" alt="placeholder"  height="100px" width="1200px"> -->
-        <h1 class="movie-title">Movie Mania</h1>
+        <h1 class="movieTitle">Movie Mania</h1>
     </header>
   <main>
     <aside class="side-container">
@@ -46,28 +46,8 @@
     </aside>
     <section class = "results-container">
       <div class = "movie-results">
-      <h2>Showing a random movie from your selected genre: <span id="result-text"></span></h2>
-        <div id="result-content">
-          <p id="movieTitle"></p>
-          <p id="moviePoster"></p>
-          <p id="movieYear"></p>
-          <p id="movieRated"></p>
-          <p id="movieReleased"></p>
-          <p id="movieActors"></p>
-          <p id="movieGenre"></p>
-          <p id="movieLanguage"></p>
-          <p id="moviePlot"></p>
-        </div>
+      <h2><span id="result-text"></span></h2>
       </div>
-    <div class="stream-results" id="stream-container">
-      <h2>Where to Stream: <span id="result-stream"></span></h2>
-        <div id="result-stream-content">
-          <p id="sname"></p>
-          <p id="sprice"></p>
-          <p id="stype"></p>
-          <p id="surl"></p>
-        </div>
-    </div>
     <!-- result container -->
     <div class="container">
       <div class="result-container">
@@ -75,6 +55,15 @@
           <!-- movie information here -->
           <!-- <div class = "movie-poster"> -->
         </div>
+      </div>
+      <div class="stream-results" id="stream-container">
+        <h2>Where to Stream: <span id="result-stream"></span></h2>
+          <div id="result-stream-content">
+            <p id="sname"></p>
+            <p id="sprice"></p>
+            <p id="stype"></p>
+            <p id="surl"></p>
+          </div>
       </div>
     </div>
     <!-- end of result container -->
