--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
     <!-- end of result container -->
     </section>
   </main>
-  <footer></footer>
+  <footer>
+    <h4>Streaming data powered by <a href="https://www.watchmode.com/">WatchMode.com</a></h4>
+  </footer>
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
