--- a/index.html
+++ b/index.html
@@ -19,20 +19,10 @@
     </header>
   <main>
     <aside class="side-container">
-      <div class="side">
-        <section id="search-section" class="mb-2">
-          <h2>Pick which genre you are in the mood for:</h2>
-          <button class="btn" id = "book-movies">Movies you can watch instead of read</button>
-          <button class="btn" id = "sad-movies">Movies that will make you cry</button>
-          <button class="btn" id = "scary-movies">Movies that will make you sleep with the lights on</button>
-          <button class="btn" id = "comedy-movies">Movies that will make you laugh</button>
-          <button class="btn" id = "romance-movies">Movies that will make you fall in love</button>
-          <button class="btn" id = "action-movies">Movies that will make you want to do parkour and/or punch people</button>
-        </section>
 <!-- search container -->
         <div class="search-container">
         <div class="search-element">
-          <h3>Search Movie:</h3>
+          <h2>Search Movie:</h2>
           <input type="text" class="form-control" placeholder="Search Movie Title ..." id="movie-search-box"
             onkeyup="findMovies()" onclick="findMovies()">
   
@@ -43,7 +33,26 @@
         </div>
       </div>
       <!-- end of search container -->
+      <div class="side">
+        <section id="search-section" class="mb-2">
+          <h2><p>Don't know which movie you want to watch?</p>
+            <p>Pick a genre and we'll pick a movie for you:</p></h2>
+          <button class="btn" id = "book-movies">Movies you can watch instead of read</button>
+          <button class="btn" id = "sad-movies">Movies that will make you cry</button>
+          <button class="btn" id = "scary-movies">Movies that will make you sleep with the lights on</button>
+          <button class="btn" id = "comedy-movies">Movies that will make you laugh</button>
+          <button class="btn" id = "romance-movies">Movies that will make you fall in love</button>
+          <button class="btn" id = "action-movies">Movies that will make you want to do parkour and/or punch people</button>
+        </section>
+      </div>
+
+        <!--movie history-->
+        <div class = "search-history">
+          <h2 id="search-history-header"></h2>
+          <ul id="show-movie"></ul>
+        </div>
     </aside>
+    <!--end of aside-->
     <section class = "results-container">
       <div class = "movie-results">
       <h2><span id="result-text"></span></h2>
