Fixed styling with recent movie buttons, added styling to streaming results

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       </div id="doggie">
         <img src="./assets/images/movie-theater-dog.PNG" height="300px"/>
       </div>
-      <!-- <img src="./assets/images/blackplaceholder.PNG" alt="placeholder"  height="100px" width="1200px"> -->
         <h1 class="movieTitle">Movie Mania</h1>
     </header>
   <main>
@@ -49,7 +48,7 @@
         <!--movie history-->
         <div class = "search-history">
           <h2 id="search-history-header"></h2>
-          <ul id="show-movie"></ul>
+          <ul class="movie-history" id="show-movie"></ul>
         </div>
     </aside>
     <!--end of aside-->
