--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
           </div>
       </div>
     </div>
+    <div id="errorModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <p id="errorModalText"></p>
+      </div>
+    </div>
     <!-- end of result container -->
     </section>
   </main>
