--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <!-- search container -->
         <div class="search-container">
         <div class="search-element">
-          <h2>Search Movie:</h2>
+          <h2>Search:</h2>
           <input type="text" class="form-control" placeholder="Search Movie Title ..." id="movie-search-box"
             onkeyup="findMovies()" onclick="findMovies()">
   
